# GmGnAPI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  PROJECT_COMPLETE.md  PYPI_PUBLISHING.md  README.md  enhanced_example.py  example.py  pyproject.toml  requirements.txt  test.py
.github/: copilot-instructions.md
docs/: advanced.html  api-reference.html  examples.html  getting-started.html  index.html  installation.html  robots.txt  sitemap.xml
docs/assets/css/: style.css
docs/assets/js/: main.js
examples/: advanced_monitoring.py  basic_usage.py  data_export.py  filtering_alerts.py
scripts/: publish_to_pypi.py
src/gmgnapi/: __init__.py  client.py  client_enhanced.py  models.py
tests/: conftest.py  test_client.py
